Rewrite cmake file and add FINDPAM feature

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ project(mils)
 set (CMAKE_COLOR_MAKEFILE ON)
 set (CMAKE_VERBOSE_MAKEFILE ON)
 set (CMAKE_INCLUDE_CURRENT_DIR TRUE)
+set (CMAKE_POSITION_INDEPENDENT_CODE TRUE)
 
 
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")
@@ -12,24 +13,22 @@ set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")
 message (${CMAKE_MODULE_PATH})
 add_subdirectory (utils)
 
-add_library (common SHARED common.c)
-
-add_library (options options.c)
-target_link_libraries (options common)
+add_library (options OBJECT options.c)
 
 #image 
-add_library (image image.c)
+add_library (image OBJECT image.c)
 find_package (JPEG REQUIRED)
-set (image_dirs ${image_dirs} PUBLIC ${JPEG_INCLUDE_DIRS})
-set (image_libs ${image_libs} ${JPEG_LIBRARIES})
 find_package (Cairo REQUIRED)
-set (image_dirs ${image_dirs} PUBLIC ${CAIRO_INCLUDE_DIRS})
-set (image_libs ${image_libs} ${CAIRO_LIBRARIES})
+set (image_dirs ${image_dirs} 
+            PUBLIC ${JPEG_INCLUDE_DIRS}
+            PUBLIC ${CAIRO_INCLUDE_DIRS})
+set (image_libs ${image_libs}
+    ${JPEG_LIBRARIES}
+    ${CAIRO_LIBRARIES})
 target_include_directories (image ${image_dirs})
-target_link_libraries (image ${image_libs})
 
 #grphical compile
-add_library (graphic screen.c view.c view_private.c)
+add_library (graphic OBJECT screen.c view.c view_private.c)
 
 find_package (DRM REQUIRED)
 find_package (GBM REQUIRED)
@@ -47,37 +46,58 @@ set (graphic_libs
     ${GBM_LIBRARIES}
     ${EGL_LIBRARIES}
     ${PANGOCAIRO_LIBRARIES}
-    options image utils)
+    )
 
-message ("graphic : ${graphic_dirs}")
 
 target_include_directories (graphic ${graphic_dirs})
-target_link_libraries (graphic ${graphic_libs})
 
 #input compile
-add_library (input input.c keytree.c)
+add_library (input OBJECT input.c keytree.c)
 
 find_package (XkbCommon REQUIRED)
-set (input_dirs ${input_dirs} PUBLIC ${XKBCOMMON_INCLUDE_DIRS})
-set (input_libs ${input_libs} ${XKBCOMMON_LIBRARIES})
-
 find_package (LibInput REQUIRED)
-set (input_dirs ${input_dirs} PUBLIC ${LIBINPUT_INCLUDE_DIRS})
-set (input_libs ${input_libs} ${LIBINPUT_LIBRARIES})
-
 find_package (UDEV REQUIRED)
-set (input_dirs ${input_dirs} PUBLIC ${LIBUDEV_INCLUDE_DIRS})
-set (input_libs ${input_libs} ${LIBUDEV_LIBRARIES})
 
-set (input_libs ${input_libs} common)
+set (input_dirs ${input_dirs}
+    PUBLIC ${XKBCOMMON_INCLUDE_DIRS}
+    PUBLIC ${LIBINPUT_INCLUDE_DIRS}
+    PUBLIC ${LIBUDEV_INCLUDE_DIRS})
 
-message (" input :${input_dirs}")
+set (input_libs ${input_libs}
+        ${XKBCOMMON_LIBRARIES}
+        ${LIBINPUT_LIBRARIES}
+        ${LIBUDEV_LIBRARIES})
 
 target_include_directories (input ${input_dirs})
-target_link_libraries (input ${input_libs})
+
+#auth compile
+add_library (auth OBJECT auth.c auth.h)
+
+find_package (PAM REQUIRED)
+set (auth_dirs
+    PUBLIC ${PAM_INCLUDE_DIRS})
+
+set (auth_libs ${PAM_LIBRARIES})
+
+target_include_directories (auth ${auth_dirs})
 
 
+add_library (mils SHARED common
+    $<TARGET_OBJECTS:graphic>
+    $<TARGET_OBJECTS:image>
+    $<TARGET_OBJECTS:input>
+    $<TARGET_OBJECTS:options>
+    $<TARGET_OBJECTS:auth>)
+
+target_link_libraries (
+    mils
+    ${graphic_libs}
+    ${image_libs}
+    ${input_libs}
+    ${auth_libs}
+    utils
+    )
 
 
-add_executable (mils main.c)
-target_link_libraries (mils graphic input utils)
+add_executable (Mils main.c)
+target_link_libraries (Mils mils)
